minor change to stop overflow.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -419,7 +419,7 @@ footer {
 }
 
 .profile-section {
-	height: 50%;
+	height: 45%;
 	margin: 20px;
 	padding: 20px;
 	border: solid 1px black;
